--- a/ReHouse.FrontEnd/Content/style.css
+++ b/ReHouse.FrontEnd/Content/style.css
@@ -9,8 +9,22 @@
 	}
 
 
+/*ul.carousel.jcarousel-list.jcarousel-list-horizontal {
+    overflow: hidden;
+    position: relative;
+    top: 0px;
+    left: 0px;
+    margin: 0px;
+    padding: 8px 0!important;
+    width: 4010px;
+    height: 450px!important;
+}*/
 
 
+
+body{
+	-webkit-text-size-adjust: none;
+}
 body {
     -ms-text-size-adjust: 100%;
     -moz-text-size-adjust: 100%;
@@ -246,7 +260,7 @@ input:focus:-ms-input-placeholder { color:transparent; transition: 0.8s ease;} /
     position: absolute;
     font-family: ProximaNova;
     top: 18px;
-    margin-left: -239px;
+    margin-left: -279px;
 }
 
     .your_name a {
@@ -1267,7 +1281,7 @@ width: 545px;
 .news123 .content1 .img {
     width: 440px;
     height: 263px;
-    padding: 15px 20px;
+    padding: 0px 20px 15px 20px;
     float: left;
 }
 
@@ -1435,10 +1449,9 @@ width: 545px;
     .news1 .firstnews, .secondnews {
         padding-top: 20px;
         padding-bottom: 25px;
-        margin-left: 85px;
+        margin:auto;
         text-align: center;
-        width: 1332px;
-        border: 2px solid #fff;
+        width: 1100px;
         border-radius: 10px;
     }
 
@@ -1457,37 +1470,35 @@ width: 545px;
     }
 
     .news1 h3 {
-        color: #fff;
-        font-family: "Century Gothic";
-        font-family: "Century Gothic",CenturyGothic,AppleGothic,sans-serif;
-        font-size: 13px;
-        font-weight: 700;
-        text-transform: uppercase;
+        color: #114a82;
+    font-family: "ProximaNova";
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 20px;
+    text-align: left;
     }
 
     .news1 h4 {
-        color: #7c7c7c;
-        font-family: "Century Gothic";
-        font-family: "Century Gothic",CenturyGothic,AppleGothic,sans-serif;
-        font-size: 12px;
-        font-weight: 700;
-        text-transform: uppercase;
+       color: #114a82;
+    font-family: "ProximaNova";
+    font-size: 17px;
+    font-weight: 600;
+    line-height: 20px;
+    text-align: left;
     }
 
     .news1 p {
-        color: #fff;
-        line-height: 15px;
-        font-size: 12px;
-        font-family: "Century Gothic";
-        font-family: "Century Gothic",CenturyGothic,AppleGothic,sans-serif;
-        margin-bottom: 20px;
+         color: #114a82;
+    font-family: "ProximaNova";
+    font-size: 12px;
+    font-weight: 600;
+    line-height: 20px;
+    text-align: left;
     }
 
     .news1 .comment1, .comment2 {
-        width: 1046px;
-        text-align: justify;
+        text-align: left;
         vertical-align: top;
-        margin-left: 141px;
     }
 
     .news1 .morenews1 {
@@ -3188,7 +3199,7 @@ padding: 32px 0px 0px 32px;
 }
 
     .managers .manager_ .contactinfo h3 a:hover {
-        color: #ffd700;
+        color: #f9a320;
     }
 
 .adress {
@@ -3815,6 +3826,7 @@ body a, p, button {
     background-size:18px 18px;
     background-position:33% 50%;
     transition:.5s ease;
+margin-bottom:30px;
 }
 
 
@@ -3941,6 +3953,19 @@ body a, p, button {
 ._cost div input:focus:-moz-placeholder { color:transparent!important; transition: 0.8s ease;} /* FF 4-18 */
 ._cost div input:focus::-moz-placeholder { color:transparent!important; transition: 0.8s ease;} /* FF 19+ */
 ._cost div input:focus:-ms-input-placeholder { color:transparent!important; transition: 0.8s ease;} /* IE 10+ */
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
