--- a/ReHouse.FrontEnd/Areas/Cabinet/Views/NewBuilding/Edit.cshtml
+++ b/ReHouse.FrontEnd/Areas/Cabinet/Views/NewBuilding/Edit.cshtml
@@ -40,6 +40,7 @@
 
         $(function () {
 
+            $("textarea#wyiswyg").jqte();
             ///map
             function initialize() {
 
@@ -304,7 +305,7 @@
                 }
                 <tr>
                     <td>Описание:</td>
-                    <td>@Html.TextAreaFor(m => m.Description, new { @rows = "20" })</td>
+                    <td>@Html.TextAreaFor(m => m.Description, new { @rows = "20", @id = "wyiswyg" })</td>
                 </tr>
                 @if (ViewBag.BuildersList != null && ViewBag.BuildersList.Count > 0)
                 {
