--- a/ReHouse.FrontEnd/Areas/Cabinet/Views/Sale/Edit.cshtml
+++ b/ReHouse.FrontEnd/Areas/Cabinet/Views/Sale/Edit.cshtml
@@ -25,6 +25,7 @@
     @Scripts.Render("~/bundles/deleteImage")
     <script>
         $(function () {
+            $("textarea#wyiswyg").jqte();
             $('#products').slides({
                 preload: true,
                 preloadImage: '',
@@ -338,7 +339,7 @@
                 </tr>
                 <tr>
                     <td>Описание:</td>
-                    <td>@Html.TextAreaFor(m => m.Description, new { @rows = "20" })</td>
+                    <td>@Html.TextAreaFor(m => m.Description, new { @rows = "20", @id = "wyiswyg" })</td>
                 </tr>
 
                 <tr>
