--- a/ReHouse.FrontEnd/Views/News/Detail.cshtml
+++ b/ReHouse.FrontEnd/Views/News/Detail.cshtml
@@ -34,13 +34,13 @@
                     <p>@Html.Raw(Model.Description)</p>
                     <div class="share_icons1">
                         <div class="share_fb">
-                            <a onclick="Share.facebook('http://rehouse-realty.com.ua/news/detail/@(Model.Id)', '@Model.Title', 'http://rehouse-realty.com.ua@(Url.Content(Model.Images?.FirstOrDefault() != null ? Model.Images.FirstOrDefault().Url + Model.Images.FirstOrDefault().FileName : "~/Content/images/news1.jpg"))', '@(Model.Description?.Replace(Environment.NewLine, " "))')"></a>
+                            <a onclick="Share.facebook(event, 'http://rehouse-realty.com.ua/news/detail/@(Model.Id)', '@Model.Title', 'http://rehouse-realty.com.ua@(Url.Content(Model.Images?.FirstOrDefault() != null ? Model.Images.FirstOrDefault().Url + Model.Images.FirstOrDefault().FileName : "~/Content/images/news1.jpg"))', '@(Model.Description?.Replace(Environment.NewLine, " "))')"></a>
                         </div>
                         <div class="share_vk">
-                            <a onclick="Share.vkontakte('http://rehouse-realty.com.ua/news/detail/@(Model.Id)', '@Model.Title', 'http://rehouse-realty.com.ua@(Url.Content(Model.Images?.FirstOrDefault() != null ? Model.Images.FirstOrDefault().Url + Model.Images.FirstOrDefault().FileName : "~/Content/images/news1.jpg"))', '@(Model.Description?.Replace(Environment.NewLine, " "))')"></a>
+                            <a onclick="Share.vkontakte(event, 'http://rehouse-realty.com.ua/news/detail/@(Model.Id)', '@Model.Title', 'http://rehouse-realty.com.ua@(Url.Content(Model.Images?.FirstOrDefault() != null ? Model.Images.FirstOrDefault().Url + Model.Images.FirstOrDefault().FileName : "~/Content/images/news1.jpg"))', '@(Model.Description?.Replace(Environment.NewLine, " "))')"></a>
                         </div>
                         <div class="share_tw">
-                            <a onclick="Share.twitter('http://rehouse-realty.com.ua/news/detail/@(Model.Id)', '@Model.Title')"></a>
+                            <a onclick="Share.twitter(event, 'http://rehouse-realty.com.ua/news/detail/@(Model.Id)', '@Model.Title')"></a>
                         </div>
                     </div>
                     <h4>@Model.Date.ToShortDateString() в @Model.Date.ToShortTimeString()</h4>
