--- a/ReHouse.FrontEnd/Views/Shared/NewB/_listOfNewBuildings.cshtml
+++ b/ReHouse.FrontEnd/Views/Shared/NewB/_listOfNewBuildings.cshtml
@@ -19,7 +19,7 @@
                     }
                     else if (item.IsNew)
                     {
-                        <div class="redimg"><img src="~/Content/images/newred.png"></div>
+                        <div class="redimg"><img src="~/Content/images/newred.jpg"></div>
                     }
                     <h3>@item.Name</h3>
                     <h4><img src="~/Content/images/pin.png" height="13" alt="" />@item.Adress</h4>
@@ -36,7 +36,7 @@
                         <div><img src="~/Content/images/m21.png" height="32" alt="" /><p>0 м²</p></div>*@
                     </div>
                     <div class="bottom">
-                        <div><p class="cost">от @item.Price.ToString("# ### ##0") грн/м²</p></div>
+                        <div><p class="cost">от @item.Price.ToString("# ### ##0")грн/м²</p></div>
                         <div class="share" onclick="share(this, event);"><img src="~/Content/images/share.png" height="32" alt="" /></div>
                         <div class="like" onclick="addtocart(@item.Id, '@AdvertsType.NewBuilding', true, this, event);"></div>
                         <div class="shared_icons">
