--- a/ReHouse.FrontEnd/Views/Shared/_LayoutAdverts.cshtml
+++ b/ReHouse.FrontEnd/Views/Shared/_LayoutAdverts.cshtml
@@ -161,8 +161,8 @@
             <span class="flex_header">
                 <div class="social">
                     <a href="https://www.facebook.com/rehouseodessastars/?ref=bookmarks" class="fb" target="_blank"></a>
-                    <a href="https://www.youtube.com/channel/UCr_t3R1EhpY6oAWnwSSmC-A" class="yt" target="_blank"></a>
                     <a href="https://www.instagram.com/rehouseodessa/" class="gmail" target="_blank"></a>
+                    <a href="https://www.youtube.com/channel/UCr_t3R1EhpY6oAWnwSSmC-A" class="yt" target="_blank"></a>
                     @*<a href="https://vk.com/rehouseodessastars" class="vk" target="_blank"></a>*@
                 </div>
                 <div class="search">
@@ -339,8 +339,8 @@
                 <div id="toTop">↑</div>
                 <div class="social">
                     <a href="https://www.facebook.com/rehouseodessastars/?ref=bookmarks" class="fb" target="_blank"></a>
-                    <a href="https://www.youtube.com/channel/UCr_t3R1EhpY6oAWnwSSmC-A" class="yt" target="_blank"></a>
                     <a href="https://www.instagram.com/rehouseodessa/" class="gmail" target="_blank"></a>
+                    <a href="https://www.youtube.com/channel/UCr_t3R1EhpY6oAWnwSSmC-A" class="yt" target="_blank"></a
                     @*<a href="https://vk.com/rehouseodessastars" class="vk" target="_blank"></a>*@
                 </div>
                 <div class="bottomnav">
