--- a/ReHouse.FrontEnd/Views/NewBuilding/Detail.cshtml
+++ b/ReHouse.FrontEnd/Views/NewBuilding/Detail.cshtml
@@ -45,20 +45,24 @@
 }
 <span class="noprint">
     <span class="none">
+        </div>
         <div class="navigation_string">
-            <div class="way">
-                <a href="/">Главная</a>
-                <pre> </pre>
-                <p>/</p>
-                <pre> </pre>
-                <a href="/newbuilding/">Новострои</a>
-                <pre> </pre>
-                <p>/</p>
-                <pre> </pre>
-                <a href="/newbuilding/detail/@Model.NewBuilding.Id">@Model.NewBuilding.Name</a>
+            <div class="container">
+                <div class="way">
+                    <a href="/">Главная</a>
+                    <pre> </pre>
+                    <a>/</a>
+                    <pre> </pre>
+                    <a href="/newbuilding/">Новострои</a>
+                    <pre> </pre>
+                    <a>/</a>
+                    <pre> </pre>
+                    <a href="/newbuilding/detail/@Model.NewBuilding.Id">@Model.NewBuilding.Name</a>
+                </div>
             </div>
         </div>
-    </span>
+        <div class="container">
+</span>
 </span>
 <span class="noprint">
     <div class="wrapper-prod">
