Not Found + some fixes

--- a/ReHouse.FrontEnd/Views/Error/NotFound.cshtml
+++ b/ReHouse.FrontEnd/Views/Error/NotFound.cshtml
@@ -6,9 +6,7 @@
 <div class="nothing-found">
 
     <h3 class="errorFound">
-        На данный момент, такая страница отсуствует, или вы ввели неправильный путь!!!
+        Извините, страница не найдена!
     </h3>
-    <h4>
-        @Html.HtmlText("<br/> Ошибка 404. <br/> <b> С ув. команда Itfamily.</b>")
-    </h4>
+    <a class="backonmain">Вернуться на главную</a>
 </div>
