--- a/ReHouse.FrontEnd/Content/style.css
+++ b/ReHouse.FrontEnd/Content/style.css
@@ -3954,12 +3954,44 @@ margin-bottom:30px;
 ._cost div input:focus::-moz-placeholder { color:transparent!important; transition: 0.8s ease;} /* FF 19+ */
 ._cost div input:focus:-ms-input-placeholder { color:transparent!important; transition: 0.8s ease;} /* IE 10+ */
 
+.nothing-found {
+    width:727px;
+    background-image: url('images/bg_error.png');
+    background-repeat:no-repeat;
+    margin:auto;
+    margin-top:159px;
+    margin-bottom:175px;
+}
 
-
-
-
-
-
+.nothing-found .errorFound {
+    color: #114a82;
+    font-family: "Proxima Nova - Extrabld";
+    font-size: 36px;
+    font-weight: 400;
+    margin:auto;
+    margin-top:428px;
+    margin-bottom:44px;
+}
+.nothing-found .errorFound a.backonmain {
+        display: block;
+        width: 190px;
+        padding: 18px 0px 15px 0px;
+        text-decoration: none;
+        color: #ffffff;
+        font-family: "Proxima Nova";
+        font-size: 18px;
+        font-weight: 700;
+        text-align: center;
+        background-color: #114a82;
+        letter-spacing: 1.5px;
+        margin: auto;
+}
+.nothing-found .errorFound a.backonmain:hover {
+    -webkit-transition: .8s ease;
+    transition: .8s ease;
+    background-color: #f9a320;
+    color: #114a82;
+}
 
 
 
