--- a/ReHouse.FrontEnd/Views/Shared/_Layout.cshtml
+++ b/ReHouse.FrontEnd/Views/Shared/_Layout.cshtml
@@ -77,7 +77,7 @@
                 <div class="social">
                     <a href="https://www.facebook.com/rehouseodessastars/?ref=bookmarks" class="fb" target="_blank"></a>
                     <a href="https://www.instagram.com/rehouseodessa/" class="gmail" target="_blank"></a>
-                    <a href="https://www.youtube.com/channel/UCr_t3R1EhpY6oAWnwSSmC-A" class="yt" target="_blank"></a>
+                    <a href="https://www.youtube.com/channel/UCq_8bnTrV3J8Vp9-vVweq8g?view_as=subscriber" class="yt" target="_blank"></a>
                     @*<a href="https://vk.com/rehouseodessastars" class="vk" target="_blank"></a>*@
                 </div>
                 <div class="search">
@@ -320,7 +320,7 @@
                     <div class="social">
                         <a href="https://www.facebook.com/rehouseodessastars/?ref=bookmarks" class="fb" target="_blank"></a>
                         <a href="https://www.instagram.com/rehouseodessa/" class="gmail" target="_blank"></a>
-                        <a href="https://www.youtube.com/channel/UCr_t3R1EhpY6oAWnwSSmC-A" class="yt" target="_blank"></a>
+                        <a href="https://www.youtube.com/channel/UCq_8bnTrV3J8Vp9-vVweq8g?view_as=subscriber" class="yt" target="_blank"></a>
                         
                         @*<a href="https://vk.com/rehouseodessastars" class="vk" target="_blank"></a>*@
                     </div>
