--- a/ReHouse.FrontEnd/Views/Error/NotFound.cshtml
+++ b/ReHouse.FrontEnd/Views/Error/NotFound.cshtml
@@ -4,5 +4,5 @@
     <h3 class="errorFound">
         Извините, страница не найдена!
     </h3>
-    <a class="backonmain">Вернуться на главную</a>
+    <a class="backonmain" href="/">Вернуться на главную</a>
 </div>
