--- a/ReHouse.FrontEnd/Content/mobile.css
+++ b/ReHouse.FrontEnd/Content/mobile.css
@@ -783,7 +783,7 @@
             }
 
     #toTop {
-        bottom: 144px;
+        bottom: 77px;
         right: 23px;
     }
 
@@ -1298,6 +1298,28 @@
 
 
 @media(max-width:480px) {
+    .nothing-found {
+    width: 450px;
+    height: 400px;
+    background-image: url(images/bg_error.png);
+    background-repeat: no-repeat;
+    margin: auto;
+    margin-top: 90px;
+    margin-bottom: 50px;
+    background-size: contain;
+}
+.nothing-found h3 {
+    color: #114a82;
+    font-family: "ProximaNova";
+    font-size: 27px;
+    font-weight: 900;
+    padding-top: 242px;
+    text-align: center;
+    margin-bottom: 17px;
+}
+
+
+
 
 #testimonials {
     margin-bottom: 115px;
@@ -1597,7 +1619,7 @@
             }
 
     #toTop {
-        bottom: 139px;
+        bottom: 77px;
         right: 23px;
     }
 
@@ -2076,6 +2098,29 @@
 
 
 @media(max-width:415px) {
+
+    .nothing-found {
+    width: 310px;
+    height: 300px;
+    background-image: url(images/bg_error.png);
+    background-repeat: no-repeat;
+    margin: auto;
+    margin-top: 55px;
+    margin-bottom: 50px;
+    background-size: contain;
+}
+.nothing-found h3 {
+    color: #114a82;
+    font-family: "ProximaNova";
+    font-size: 20px;
+    font-weight: 900;
+    padding-top: 176px;
+    text-align: center;
+    margin-bottom: 17px;
+}
+
+
+
 #products_example {
     width: 320px!important;
     position: relative;
@@ -2214,7 +2259,7 @@
     font-size: 20px;
 }
     #toTop {
-        bottom: 148px;
+        bottom: 77px;
     right: 25px;
     }
 
