--- a/ReHouse.FrontEnd/Content/style.css
+++ b/ReHouse.FrontEnd/Content/style.css
@@ -1034,7 +1034,7 @@ border-bottom: none;
     flex-direction:row;
     background-color:#f3f3f9;
         justify-content: space-around;
-            margin-top: -137px;
+            margin-top: -115px;
     position: absolute;
 }
 
@@ -3532,7 +3532,7 @@ body a, p, button {
     flex-direction:row;
     justify-content:space-between;
     position:absolute;
-    top:325px;
+    top:317px;
     left:560px;
     z-index:10001;
 
@@ -3602,7 +3602,7 @@ body a, p, button {
         text-align:center;
     }
     .inner-testimonial img {
-        margin-bottom:30px;
+        margin-bottom:20px;
     }
     #testimonials ul li .inner-testimonial {
         margin-bottom:25px!important;
@@ -3998,12 +3998,40 @@ margin-bottom:30px;
 }
 
 
+#nav.fixed{
+	    position: fixed;
+	    display: flex;
+	    flex-direction: row;
+	    justify-content: flex-end;
+	    top: 0;
+	    width: 100%;
+	    background-color: rgba(17, 74, 130, .99);
+	    z-index: 999999999999;
+	    margin-top: 0px;
+	    transition: .7s ease;
+   }
+   #nav.fixed a{
+	    color: #fff;
+   }
+    #nav.fixed a:hover{
+	    transition: .3s ease;
+   }
 
-
-
-
-
-
+#nav.fixed .sell a:hover .sell1 {
+    transition: .6s ease;
+    opacity:.75;
+    color: #f9a320;
+        background-color: #f9a320;
+}
+#nav.fixed .sell a:hover .sell1 p{
+    transition: .6s ease;
+    color: #f9a320;
+}
+#nav.fixed .sell a:hover .sell2 {
+    transition: .6s ease;
+    opacity:.75;
+        background-color: #f9a320;
+}
 
 
 
