--- a/ReHouse.FrontEnd/Content/mobile.css
+++ b/ReHouse.FrontEnd/Content/mobile.css
@@ -320,7 +320,7 @@
 
 @media(max-width:768px) {
     #nav.fixed {
-        display`:none;
+        display:none;
     }
     #sliderFrame {
     display:none;
