--- a/ReHouse.FrontEnd/Content/mobile.css
+++ b/ReHouse.FrontEnd/Content/mobile.css
@@ -311,11 +311,15 @@
 
 
 
+@media(max-width:1900px) and (min-width:769px) {
 
-
-
-
-
+    .wrapper-prod {
+        min-width: 1200px;
+    }
+.wrapper-footer {
+    min-width: 1200px;
+}
+}
 
 
 @media(max-width:768px) {
