--- a/ReHouse.FrontEnd/Views/Shared/_Layout.cshtml
+++ b/ReHouse.FrontEnd/Views/Shared/_Layout.cshtml
@@ -109,8 +109,8 @@
                 <div class="contactinfo">
                     <div class="tel">
                         <div class="number">
-                            <div><img src="~/Content/images/tel.png" style="width:10px" height="10px"><p>+38093 057 7110</p></div>
-                            <div><img src="~/Content/images/tel.png" style="width:10px" height="10px"><p>+38048 788 6707</p></div>
+                            <div><img src="~/Content/images/tel.png" style="width:10px" height="10px"><p>048 796 46 43</p></div>
+                            <div><img src="~/Content/images/tel.png" style="width:10px" height="10px"><p>048 788 67 07</p></div>
                         </div>
                     </div>
                 </div>
