--- a/ReHouse.FrontEnd/Views/Shared/_LayoutAdverts.cshtml
+++ b/ReHouse.FrontEnd/Views/Shared/_LayoutAdverts.cshtml
@@ -194,8 +194,10 @@
                 <div class="contactinfo">
                     <div class="tel">
                         <div class="number">
-                            <div><img src="~/Content/images/tel.png" style="width:10px" height="10px"><p>+38093 057 7110</p></div>
-                            <div><img src="~/Content/images/tel.png" style="width:10px" height="10px"><p>+38048 788 6707</p></div>
+                            @foreach (var tel in ViewBag.Phones)
+                            {
+                                <div><img src="~/Content/images/tel.png" style="width:10px" height="10px"><p>@tel</p></div>
+                            }
                         </div>
                     </div>
                 </div>
